hphp/hack/test/sound_dynamic/typing/is_dynamic.bad.php.exp
File "is_dynamic.bad.php", line 4, characters 13-19:
dynamic typehints are not allowed in this position (Naming[2125])
