hphp/hack/test/sound_dynamic/typing/is_dynamic.bad.php
<?hh

function f(mixed $x) : void {
  if ($x is dynamic) {}
}
